--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <protobuf-java.version>4.31.1</protobuf-java.version>
         <spring-grpc.version>0.11.0</spring-grpc.version>
     </properties>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
     <dependencies>
         <dependency>
             <groupId>io.grpc</groupId>
