--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=SlaughterHouseSP
+
+# PostgreSQL connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/SlaughterHouseDB
+spring.datasource.username=postgres
+spring.datasource.password=via1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# gRPC server
+grpc.server.port=9090
