StationOne and StationTwo done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SlaughterHouseSP
 
 # PostgreSQL connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/SlaughterHouseDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=slaughterhouse
 spring.datasource.username=postgres
 spring.datasource.password=via1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,7 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # gRPC server
-grpc.server.port=9090
+spring.grpc.server.port=9090
+
+#grpc.port=9090
